--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<footer class="w-full bg-gray-800 text-white text-center py-4 mt-10">
+    <p>&copy; 2025 My Website. All Rights Reserved.</p>
+</footer>
